syntax = "proto3";
package IM.Login;

//定义服务
service ImLogin{
    rpc Regist(IMRegistReq)returns(IMRegistRes){}
    rpc Login(IMLoginReq)returns(IMLoginRes){}
}

//注册账号
message IMRegistReq{
    string user_name=1;
    string password=2;
}

//注册返回
message IMRegistRes{
    string user_name=1;
    uint32 user_id=2;
    uint32 result_code=3;
}

message IMLoginReq{
    string user_name=1;
    string password=2;
}

message IMLoginRes{
    uint32 user_id=1;
    uint32 result_code=2;
}
